--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
          bootstrap="./test/bootstrap.php"
          colors="true">
     <testsuites>
-        <testsuite name="zend-uri Test Suite">
+        <testsuite name="laminas-uri Test Suite">
             <directory>./test/</directory>
         </testsuite>
     </testsuites>
@@ -26,17 +26,17 @@
 
         <!-- OB_ENABLED should be enabled for some tests to check if all
              functionality works as expected. Such tests include those for
-             Zend\Soap and Zend\Session, which require that headers not be sent
+             Laminas\Soap and Laminas\Session, which require that headers not be sent
              in order to work. -->
-        <const name="TESTS_ZEND_OB_ENABLED" value="false" />
+        <const name="TESTS_LAMINAS_OB_ENABLED" value="false" />
 
-        <!-- Zend\Uri tests
+        <!-- Laminas\Uri tests
 
              Setting CRASH_TEST_ENABLED to true will enable some tests that may
              potentially crash PHP on some systems, due to very deep-nesting
              regular expressions.
 
              Only do this if you know what you are doing! -->
-        <const name="TESTS_ZEND_URI_CRASH_TEST_ENABLED" value="false" />
+        <const name="TESTS_LAMINAS_URI_CRASH_TEST_ENABLED" value="false" />
     </php>
 </phpunit>
