--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,50 @@
 {
-    "name": "zendframework/zend-uri",
+    "name": "laminas/laminas-uri",
     "description": "a component that aids in manipulating and validating \u00bb Uniform Resource Identifiers (URIs)",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
+        "laminas",
         "uri"
     ],
-    "homepage": "https://github.com/zendframework/zend-uri",
-    "autoload": {
-        "psr-4": {
-            "Zend\\Uri\\": "src/"
-        }
+    "homepage": "https://laminas.dev",
+    "support": {
+        "docs": "https://docs.laminas.dev/laminas-uri/",
+        "issues": "https://github.com/laminas/laminas-uri/issues",
+        "source": "https://github.com/laminas/laminas-uri",
+        "rss": "https://github.com/laminas/laminas-uri/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
-    "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-escaper": "~2.5.0",
-        "zendframework/zend-validator": "~2.5.0"
+    "config": {
+        "sort-packages": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "2.5-dev",
             "dev-develop": "2.6-dev"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "ZendTest\\Uri\\": "test/"
-        }
+    "require": {
+        "php": ">=5.3.23",
+        "laminas/laminas-escaper": "~2.5.0",
+        "laminas/laminas-validator": "~2.5.0",
+        "laminas/laminas-zendframework-bridge": "^1.0"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0"
+        "phpunit/phpunit": "~4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Laminas\\Uri\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "LaminasTest\\Uri\\": "test/"
+        }
+    },
+    "replace": {
+        "zendframework/zend-uri": "self.version"
     }
 }
