Rewriting as Laminas Project package

--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,22 @@
 {
-    "name": "zendframework/zend-uri",
+    "name": "laminas/laminas-uri",
     "description": "a component that aids in manipulating and validating \u00bb Uniform Resource Identifiers (URIs)",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
+        "laminas",
         "uri"
     ],
-    "homepage": "https://github.com/zendframework/zend-uri",
-    "autoload": {
-        "psr-4": {
-            "Zend\\Uri\\": "src/"
-        }
+    "homepage": "https://laminas.dev",
+    "support": {
+        "docs": "https://docs.laminas.dev/laminas-uri/",
+        "issues": "https://github.com/laminas/laminas-uri/issues",
+        "source": "https://github.com/laminas/laminas-uri",
+        "rss": "https://github.com/laminas/laminas-uri/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
-    "require": {
-        "php": "^5.6 || ^7.0",
-        "zendframework/zend-escaper": "^2.5",
-        "zendframework/zend-validator": "^2.5"
+    "config": {
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
@@ -23,14 +24,25 @@
             "dev-develop": "2.7.x-dev"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "ZendTest\\Uri\\": "test/"
-        }
+    "require": {
+        "php": "^5.6 || ^7.0",
+        "laminas/laminas-escaper": "^2.5",
+        "laminas/laminas-validator": "^2.5",
+        "laminas/laminas-zendframework-bridge": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2.1 || ^5.7.15",
-        "zendframework/zend-coding-standard": "~1.0.0"
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "phpunit/phpunit": "^6.2.1 || ^5.7.15"
+    },
+    "autoload": {
+        "psr-4": {
+            "Laminas\\Uri\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "LaminasTest\\Uri\\": "test/"
+        }
     },
     "scripts": {
         "check": [
@@ -41,5 +53,8 @@
         "cs-fix": "phpcbf",
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+    },
+    "replace": {
+        "zendframework/zend-uri": "self.version"
     }
 }
