Set version constraint for replaced repository in composer.json
Signed-off-by: Michał Bundyra <contact@webimpress.com>

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,6 @@
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
     "replace": {
-        "zendframework/zend-uri": "self.version"
+        "zendframework/zend-uri": "^2.7.1"
     }
 }
