--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
     "extra": {
     },
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.3 || ~8.0.0",
         "laminas/laminas-escaper": "^2.5",
         "laminas/laminas-validator": "^2.10",
         "laminas/laminas-zendframework-bridge": "^1.0"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "^2.1",
-        "phpunit/phpunit": "^5.7.27 || ^6.5.8 || ^7.1.4"
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
