--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "extra": {
     },
     "require": {
-        "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
         "laminas/laminas-escaper": "^2.9",
         "laminas/laminas-validator": "^2.39"
     },
